--- a/client/src/Components/PokemonCard/pokemonCard.css
+++ b/client/src/Components/PokemonCard/pokemonCard.css
@@ -1,21 +1,12 @@
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #212121;
-  font-family: sans-serif;
-}
+
 
 .pokemons-container {
-  margin-top: 7em;
+  top:30px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px 40px;
-  z-index: -1;
+  z-index: 2;
 }
 
 .box {
@@ -42,9 +33,9 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 4px;
-  background: rgb(173, 24, 24);
+  background: rgb(255, 255, 255);
   transition: 0.5s;
-  z-index: -1;
+  z-index: 2;
 }
 .card:hover:before {
   transform: rotate(20deg);
@@ -60,17 +51,11 @@ body {
   left: 10px;
   bottom: 10px;
   right: 10px;
-  background: rgb(182, 135, 176);
-  transition: 0.5s;
-  z-index: 1;
+  background: rgb(119, 120, 121);
+  transition: 1s;
+  z-index: 4;
 }
-/* planta (111, 165, 111)
- fuego (216, 214, 111)
- agua (108, 191, 230)
- tierra (216, 154, 95)
- posion (182, 135, 176)
- aire (53, 56, 231)
-*/
+
 .card:hover .imgBx {
   bottom: 80px;
 }
@@ -82,7 +67,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  z-index: 2;
 }
 
 .card .details {
@@ -90,6 +75,7 @@ body {
   left: 10px;
   right: 10px;
   bottom: 10px;
+  z-index: 3;
   height: 60px;
   text-align: center;
 }
@@ -110,3 +96,113 @@ body {
   display: block;
   margin-top: 5px;
 }
+
+.navbar-logo {
+  height: 77px;
+  line-height: 80px;
+  top: 198px;
+  font-size: 23px;
+  font-weight: 600;
+  width: 94px;
+  border-radius: 15px;
+  background: #dddd9b;
+  position: relative;
+  left: 700px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+#fire {
+  background: rgb(221, 112, 97);
+}
+#grass {
+  background: rgb(111, 165, 111);
+}
+#water {
+  background: rgb(108, 191, 230);
+}
+#normal {
+  background: rgb(182, 180, 180);
+}
+
+#fighting {
+  background: rgb(100, 100, 100);
+}
+
+#flying {
+  background: rgb(167, 237, 241);
+}
+#poison {
+  background: rgb(182, 135, 176);
+}
+
+#ground {
+  background: rgb(80, 50, 16);
+}
+
+#rock {
+  background: rgb(216, 154, 95);
+}
+
+#bug {
+  background: rgb(163, 233, 154);
+}
+
+#ghost {
+  background: rgb(24, 15, 141);
+}
+
+#steel {
+  background: rgb(65, 65, 65);
+}
+
+#electric {
+  background: rgb(241, 228, 38);
+}
+
+#psychic {
+  background: rgb(150, 81, 81);
+}
+
+#Ice {
+  background: rgb(0, 217, 255);
+}
+
+#dragon {
+  background: rgb(54, 73, 243);
+}
+
+#dark {
+  background: rgb(24, 22, 22);
+}
+
+#fairy {
+  background: rgb(235, 177, 177);
+}
+
+#unknown {
+  background: rgb(100, 100, 100);
+}
+
+.pokemon-search > h1{
+	
+	display: flex;
+    width: 700px;
+    height: 54px;
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    line-height: 40px;
+    position: absolute;
+    top: 200px;
+    right: 0;
+    bottom: 0;
+    left: 50px;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+
+
+
+
