--- a/client/src/Components/navBar/NavBar.css
+++ b/client/src/Components/navBar/NavBar.css
@@ -9,15 +9,50 @@
   z-index: 300 !important;
 }
 
-.navbar-logo {
-  height: 80px;
-  line-height: 80px;
-  color: aliceblue;
-  cursor: pointer;
-}
+
 
 .scrolling {
-  background-color: black;
+  background-color: rgba(209, 202, 202, 0.589);
   transition: all 0.5 ease;
   z-index: 1;
+  border-radius: 13px;
+  box-shadow: inset 0 0 0 1000px rgba(253, 253, 253,);
+}
+
+.inputSearch {
+  width: 204px;
+  left: 1px;
+  font-size: 20px;
+  top: 24px;
+  font-weight: 500;
+  position: relative;
+  border-radius: 14px;
+  background-color: #f5f2f2;
+  height: 35px;
+  outline: none;
+  padding-left: 5px;
+}
+
+.buttonSearch {
+  width: 90px;
+  height: 33px;
+  border-radius: 10px;
+  background-color: white;
+  position: relative;
+  left: 155px;
+  top: -139px;
+}
+
+
+.buttonSearch:hover{
+background-color: black;
+color: white;
+}
+
+.music{
+  width: 12px;
+  left: 1298px;
+  position: relative;
+  height: 0px;
+  top: -20px;
 }
