--- a/client/src/Components/pagination/pagination.css
+++ b/client/src/Components/pagination/pagination.css
@@ -1,29 +1,43 @@
 .button {
-  border: 1px solid #f8f8f8;
-  padding: 10px;
-  background-color: #ffffff;
+  border: none;
+  /* padding: 15px; */
+  font-size: 15px;
+  background-image: url('../media/pokebola-paginado.gif');
+  text-decoration: none;
+  font-weight: 600;
   color: #000000;
-  text-decoration: none;
+  background-size: contain;
+  background-position: 14px -2px;
   text-transform: uppercase;
-  font-family: "Helvetica", sans-serif;
-  border-radius: 50px;
-  text-align: center;
-  justify-content: center;
-}
-
-.button-principal {
-  border: 1px solid #f7f7f7;
-  padding: 15px;
-  font-size: 19px;
-  background-color: #020202;
-  color: #f8f8f8;
-  text-decoration: none;
-  text-transform: uppercase;
+  height: 64px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  width: 81px;
   font-family: "Helvetica", sans-serif;
   border-radius: 7px;
   text-align: center;
-  justify-content: center;
 }
+
+.button-principal {
+  border: none ;
+  padding: 15px;
+  font-size: 15px;
+ background-image: url('../media/paginado.gif');
+  text-decoration: none;
+  font-weight: 600;
+  color: #4e0e0e;
+  background-size: contain;
+  background-position: -5px -1px;
+  text-transform: uppercase;
+  height: 98px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  width: 81px;
+  font-family: "Helvetica", sans-serif;
+  border-radius: 7px;
+  text-align: center;
+}
+
 
 .button-false {
   display: none;
