--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -8,7 +8,20 @@
   background-repeat: no-repeat;
 }
 
-.cards{
+.cards {
   padding-top: 115px;
   padding-bottom: 50px;
+}
+
+.msj-error2 {
+  color: rgb(228, 3, 3);
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px rgb(0 0 0),
+    0 0 80px rgb(0 0 0), 0 0 90px rgb(0 0 0), 0 0 100px rgb(0 0 0),
+    0 0 150px rgb(0 0 0);
+  top: 78px;
+  font-size: 22px;
+  font-weight: 500;
+  left: -82px;
+  position: absolute;
+  width: 900px;
 }
