--- a/client/src/Components/Music/Music.css
+++ b/client/src/Components/Music/Music.css
@@ -6,13 +6,21 @@
 }
 
 .logo-music{
+    display: flex;
+    flex-direction: row;
     width: 170px;
-    position: absolute;
-    left: -177px;
-    height: 60px;
-
+    position: fixed;
+    left: 1023px;
+    height: 0px;
+    justify-content: center;
+    align-items: center;
 }
 
 .audio-player{
     width: 140px;
+}
+
+.image-logo{
+    height: 60px;
+    width: 170px;
 }
