--- a/client/src/Components/PokemonCard/pokemonCard.css
+++ b/client/src/Components/PokemonCard/pokemonCard.css
@@ -85,7 +85,7 @@
   padding: 0;
   font-weight: 600;
   font-size: 16px;
-  color: #777;
+  color: rgb(37, 37, 37);
   text-transform: uppercase;
 }
 
@@ -100,106 +100,280 @@
 .navbar-logo {
   height: 77px;
   line-height: 80px;
-  top: 198px;
+  top: -34px;
   font-size: 23px;
   font-weight: 600;
   width: 94px;
   border-radius: 15px;
   background: #dddd9b;
   position: relative;
-  left: 700px;
+  left: 549px;
   color: rgb(0, 0, 0);
   cursor: pointer;
 }
 
 #fire {
   background: rgb(221, 112, 97);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
+  top: 15px;
+
 }
 #grass {
   background: rgb(111, 165, 111);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 #water {
   background: rgb(108, 191, 230);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 #normal {
   background: rgb(182, 180, 180);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #fighting {
   background: rgb(100, 100, 100);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #flying {
   background: rgb(167, 237, 241);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 #poison {
   background: rgb(182, 135, 176);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #ground {
   background: rgb(80, 50, 16);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #rock {
   background: rgb(216, 154, 95);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #bug {
   background: rgb(163, 233, 154);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #ghost {
   background: rgb(24, 15, 141);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #steel {
   background: rgb(65, 65, 65);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #electric {
   background: rgb(241, 228, 38);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #psychic {
   background: rgb(150, 81, 81);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #Ice {
   background: rgb(0, 217, 255);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #dragon {
   background: rgb(54, 73, 243);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #dark {
   background: rgb(24, 22, 22);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #fairy {
   background: rgb(235, 177, 177);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 #unknown {
   background: rgb(100, 100, 100);
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
 }
 
 .pokemon-search > h1{
 	
-	display: flex;
-    width: 700px;
-    height: 54px;
-    color: rgb(0, 0, 0);
-    font-size: 40px;
-    line-height: 40px;
-    position: absolute;
-    top: 200px;
-    right: 0;
-    bottom: 0;
-    left: 50px;
-    margin: auto;
-    overflow: hidden;
+  display: flex;
+  width: 700px;
+  height: 54px;
+  color: rgb(0, 0, 0);
+  font-size: 40px;
+  line-height: 40px;
+  position: absolute;
+  top: 370px;
+  right: 0;
+  bottom: 0;
+  left: 50px;
+  margin: auto;
+  overflow: hidden;
 }
+
 
 
 
