--- a/client/src/Components/loading/Loading.css
+++ b/client/src/Components/loading/Loading.css
@@ -18,3 +18,50 @@
     z-index: -1;
   }
   
+
+
+.loader {
+  font-size: 150px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  top: -306px;
+  left: -142px;
+  letter-spacing: 2px;
+  position: relative;
+  box-sizing: border-box;
+  text-shadow:
+  0 0 5px #fff,
+  0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0),
+  0 0 90px rgb(0, 0, 0),
+  0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
+}
+.loader::after {
+  content: 'Loading';
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #263238;
+  text-shadow: 0 0 2px #FFF, 0 0 1px #FFF, 0 0 1px #FFF;
+ 
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  animation: animloader 6s linear infinite;
+}
+
+@keyframes animloader {
+  0% {
+    height: 100%;
+  }
+  100% {
+    height: 0%;
+  }
+}
