--- a/client/src/Components/navBar/NavBar.css
+++ b/client/src/Components/navBar/NavBar.css
@@ -9,19 +9,17 @@
   z-index: 300 !important;
 }
 
-
-
 .scrolling {
   background-color: rgba(137, 130, 201, 0.767);
   transition: all 0.5 ease;
   z-index: 1;
   border-radius: 13px;
-  box-shadow: inset 0 0 0 1000px rgba(253, 253, 253,);
+  box-shadow: inset 0 0 0 1000px rgba(253, 253, 253);
 }
 
 .inputSearch {
-  width: 160px;
-  left: -181px;
+  width: 180px;
+  left: -196px;
   font-size: 20px;
   top: 24px;
   font-weight: 500;
@@ -29,7 +27,7 @@
   border-radius: 14px;
   background-color: #c7c0c0;
   height: 35px;
-  outline: none;;
+  outline: none;
 }
 
 .buttonSearch {
@@ -42,14 +40,12 @@
   top: -139px;
 }
 
-
-.buttonSearch:hover{
-background-color: rgba(19, 17, 17, 0.856);
-color: white;
+.buttonSearch:hover {
+  background-color: rgba(19, 17, 17, 0.856);
+  color: white;
 }
 
-
-.btn-create{
+.btn-create {
   height: 90px;
   bottom: 1em;
   font-size: 17px;
@@ -63,8 +59,7 @@ color: white;
   cursor: pointer;
 }
 
-
-.btn-create:hover{
+.btn-create:hover {
   background-color: rgba(11, 11, 49, 0.856);
   color: white;
-  }
+}
