--- a/client/src/Components/Music/Music.css
+++ b/client/src/Components/Music/Music.css
@@ -6,14 +6,14 @@
 }
 
 .logo-music {
-  display: flex;
-  flex-direction: row;
-  width: 170px;
-  position: fixed;
-  left: 1023px;
-  height: 0px;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    width: 170px;
+    position: fixed;
+    right: 200px;
+    height: 0px;
+    justify-content: center;
+    align-items: center;
 }
 
 .audio-player {
