--- a/client/src/Components/pagination/pagination.css
+++ b/client/src/Components/pagination/pagination.css
@@ -2,7 +2,7 @@
   border: none;
   /* padding: 15px; */
   font-size: 15px;
-  background-image: url("../media/pokebola-paginado.gif");
+  background-image: url("../media/loadingBall.png");
   text-decoration: none;
   font-weight: 600;
   color: #000000;
