--- a/client/src/Components/PokemonDetail/PokemonDetail.css
+++ b/client/src/Components/PokemonDetail/PokemonDetail.css
@@ -179,3 +179,184 @@ p {
   width: 112px;
   background: #f52004;
 }
+
+@media only screen and (max-width: 767px) {
+
+
+  .wrapper {
+    background-image: url("../media/cardPokemon.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 673px;
+    margin: auto;
+    width: 478px;
+    border-radius: 21px;
+  }
+
+  .wrapper > h1 {
+    position: relative;
+    top: 53px;
+    display: flex;
+    font-size: 25px;
+    justify-content: center;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .pokebola {
+    position: relative;
+    position: relative;
+    left: -171px;
+    top: -98px;
+    font-weight: 700;
+    font-size: 30px;
+    height: 97px;
+    width: 129px;
+  }
+
+  .attack {
+    position: relative;
+    left: 170px;
+    top: -8px;
+    color: #961e1e;
+    font-weight: 700;
+    font-size: 30px;
+    width: 427px;
+  }
+
+  .pokemon-cart-image {
+    width: 371px;
+    height: 243px;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    top: -107.5px;
+    left: 54px;
+  }
+
+  .pokemon-image {
+    width: 100%;
+    position: relative;
+    left: 4px;
+    height: 100%;
+    top: 1px;
+  }
+
+  .box-cart {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  p {
+    margin-top: 10px;
+  }
+
+  .wrapper2 {
+    width: 300px;
+    border-radius: 14px;
+    border: 2px solid #ffba5c;
+  }
+
+  .pokemon-cart-image2 {
+    background: #eafee6;
+    width: 140px;
+    border-top-left-radius: 14px;
+    border-bottom-left-radius: 14px;
+    display: inline-block;
+  }
+
+  .box-cart2 {
+    font-size: 14px;
+    float: right;
+    top: 0px;
+    margin-top: 8%;
+    margin-right: 13%;
+    text-align: center;
+  }
+
+  .heart-Img {
+    position: relative;
+    width: 42px;
+    left: 118px;
+    height: 43px;
+    top: 2px;
+  }
+
+  .heart {
+    position: relative;
+    font-size: 52px;
+    bottom: 98px;
+    left: 80px;
+  }
+  .type {
+    position: relative;
+    bottom: 80px;
+    right: 11px;
+  }
+  .defense {
+    position: relative;
+    bottom: 80px;
+    right: 108px;
+  }
+  .speed {
+    position: relative;
+    bottom: 80px;
+    right: 112px;
+  }
+  .weight {
+    position: relative;
+    bottom: 221px;
+    right: 71px;
+  }
+  .height {
+    position: relative;
+    bottom: 236px;
+    right: 110px;
+  }
+
+  .btn-home {
+    height: 96px;
+    line-height: 80px;
+    top: -96px;
+    font-size: 23px;
+    font-weight: 600;
+    width: 94px;
+    border-radius: 27px;
+    background: #0000006e;
+    position: relative;
+    left: 352px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+
+  .btn-home:hover {
+    transition: 0.5s;
+    height: 112px;
+    width: 114px;
+    font-weight: 900;
+    font-size: 29px;
+    background: #000000;
+  }
+  .btn-delete {
+    height: 82px;
+    top: -105px;
+    font-size: 17px;
+    font-weight: 600;
+    width: 96px;
+    border-radius: 15px;
+    background: #d118009c;
+    position: relative;
+    left: -448px;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+  }
+
+  .btn-delete:hover {
+    transition: 0.5s;
+    height: 98px;
+    font-size: 22px;
+    font-weight: 600;
+    width: 112px;
+    background: #f52004;
+  }
+}
