--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -26,3 +26,19 @@
   width: 900px;
   transition: 1s;
 }
+
+
+@media screen and (max-width: 767px) {
+  .home {
+    background-size: contain;
+    background-repeat: repeat;
+  }
+  .cards {
+    padding-top: 75px;
+    padding-bottom: 25px;
+  }
+  .msj-error2 {
+    font-size: 18px;
+    left: 0;
+  }
+}
