--- a/client/src/Components/Music/Music.css
+++ b/client/src/Components/Music/Music.css
@@ -24,3 +24,33 @@
   height: 60px;
   width: 170px;
 }
+
+
+@media only screen and (max-width: 767px) {
+  .player {
+  background-color: rgba(216, 181, 181, 0);
+  color: white;
+  border: none;
+  width: 10px;
+  }
+  
+  .logo-music {
+  display: flex;
+  flex-direction: row;
+  width: 170px;
+  position: fixed;
+  right: 200px;
+  height: 0px;
+  justify-content: center;
+  align-items: center;
+  }
+  
+  .audio-player {
+  width: 140px;
+  }
+  
+  .image-logo {
+  height: 60px;
+  width: 170px;
+  }
+  }
