--- a/client/src/Components/Order/Order.css
+++ b/client/src/Components/Order/Order.css
@@ -92,3 +92,91 @@
   position: absolute;
   width: 900px;
 }
+
+@media only screen and (min-width: 767px) {
+  .content-input input,
+  .content-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  }
+  .content-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  }
+  .content-select select::-ms-expand {
+  display: none;
+  }
+  .content-select {
+  max-width: 250px;
+  position: relative;
+  }
+  .content-select select {
+  display: inline-block;
+  width: 100%;
+  cursor: pointer;
+  padding: 7px 10px;
+  height: 42px;
+  outline: 0;
+  border: 0;
+  border-radius: 0;
+  background: #f0f0f0;
+  color: #7b7b7b;
+  font-size: 1em;
+  color: #999;
+  font-family: "Quicksand", sans-serif;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  position: relative;
+  transition: all 0.25s ease;
+  }
+  .content-select select:hover {
+  background: #b1e8cd;
+  }
+  .content-select i {
+  position: absolute;
+  right: 20px;
+  top: calc(50% - 13px);
+  width: 16px;
+  height: 16px;
+  display: block;
+  border-left: 4px solid #2ac176;
+  border-bottom: 4px solid #2ac176;
+  transform: rotate(-45deg);
+  transition: all 0.25s ease;
+  }
+  .content-select:hover i {
+  margin-top: 3px;
+  }
+  #order {
+  width: 147px;
+  left: -93px;
+  top: -20px;
+  height: -7px;
+  }
+  #url {
+  width: 143px;
+  left: 57px;
+  height: -7px;
+  top: -61px;
+  }
+  #type {
+  width: 143px;
+  left: 206px;
+  top: -102px;
+  height: -7px;
+  }
+  .msj-error {
+  color: rgb(228, 3, 3);
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0), 0 0 90px rgb(0, 0, 0), 0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
+  top: 31px;
+  font-size: 22px;
+  font-weight: 500;
+  left: -82px;
+  position: absolute;
+  width: 900px;
+  }
+  }
