--- a/client/src/Components/PokemonCard/pokemonCard.css
+++ b/client/src/Components/PokemonCard/pokemonCard.css
@@ -197,3 +197,111 @@
   margin: auto;
   overflow: hidden;
 }
+
+
+
+@media only screen and (max-width: 767px) {
+  .pokemons-container {
+    top: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px 40px;
+    z-index: 2;
+  }
+
+  .box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 15px;
+    margin: 0 auto;
+  }
+  .card {
+    position: relative;
+    width: 300px;
+    height: 350px;
+    background: rgb(255, 255, 255);
+    margin: 0 auto;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  }
+  .card:before,
+  .card:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background: rgb(255, 255, 255);
+    transition: 0.5s;
+    z-index: 2;
+  }
+  .card:hover:before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  }
+  .card:hover:after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  }
+  .card .imgBx {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background: rgb(119, 120, 121);
+    transition: 1s;
+    z-index: 4;
+  }
+
+  .card:hover .imgBx {
+    bottom: 80px;
+  }
+
+  .card .imgBx img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 2;
+  }
+
+  .card .details {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    z-index: 3;
+    height: 60px;
+    text-align: center;
+  }
+
+  .card .details h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 16px;
+    color: rgb(37, 37, 37);
+    text-transform: uppercase;
+  }
+
+  .card .details h2 span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #f38695;
+    display: block;
+    margin-top: 5px;
+  }
+  .navbar-logo {
+    height: 77px;
+    line-height: 80px;
+    top: -34px;
+    font-size: 23px;
+    font-weight: 600;
+  }
+}
