--- a/client/src/Components/cover/Cover.css
+++ b/client/src/Components/cover/Cover.css
@@ -65,3 +65,33 @@
 .bn38:hover {
   background-color: #0c0c0c;
 }
+
+@media screen and (max-width: 767px) {
+  .cover-conteiner {
+  height: auto;
+}
+.video {
+  width: 100%;
+  height: 40vh;
+  object-fit: contain;
+}
+.buttonHome {
+  font-size: 40px;
+  position: relative;
+  text-align: center;
+  top: 10px;
+}
+.cover-conteiner > p {
+  margin-top: 8px;
+  font-size: 18px;
+}
+
+.bn3637 {
+  width: 90%;
+  font-size: 20px;
+  padding: 8px 16px;
+  height: 50px;
+  position: relative;
+  top: 10px;
+}
+}
