--- a/client/src/Components/loading/Loading.css
+++ b/client/src/Components/loading/Loading.css
@@ -79,3 +79,86 @@
   width: 134px;
   border: solid 2px wheat
 }
+
+
+@media (max-width: 767px){
+  .cover-conteiner {
+  height: 100vh;
+  width: 100%;
+  object-fit: contain;
+  box-shadow: inset 0 0 0 1000px rgba(253, 253, 253, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 0ch;
+  }
+  
+  .video {
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+  }
+  
+  .loader {
+  font-size: 150px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  top: -306px;
+  left: -142px;
+  letter-spacing: 2px;
+  position: relative;
+  box-sizing: border-box;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px rgb(0, 0, 0),
+  0 0 80px rgb(0, 0, 0), 0 0 90px rgb(0, 0, 0), 0 0 100px rgb(0, 0, 0),
+  0 0 150px rgb(0, 0, 0);
+  }
+  .loader::after {
+  content: "Loading";
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #263238;
+  text-shadow: 0 0 2px #fff, 0 0 1px #fff, 0 0 1px #fff;
+  
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  animation: animloader 6s linear infinite;
+  }
+  
+  @keyframes animloader {
+  0% {
+  height: 100%;
+  }
+  100% {
+  height: 0%;
+  }
+  }
+  
+  .btn-reload {
+  height: 90px;
+  bottom: 1em;
+  font-size: 17px;
+  font-weight: 600;
+  width: 124px;
+  }
+  .btn-reload:hover {
+    background-color: black;
+    color: red;
+    transition: 1s;
+    height: 100px;
+    width: 134px;
+    border: solid 2px wheat
+    }
+    }
+    
+    
+    
+    
+    
