--- a/client/src/Components/navBar/NavBar.css
+++ b/client/src/Components/navBar/NavBar.css
@@ -68,3 +68,75 @@ color: white;
   background-color: rgba(11, 11, 49, 0.856);
   color: white;
   }
+
+  @media only screen and (max-width: 767px) {
+    .navbar {
+    position: fixed;
+    top: 0;
+    background-color: transparent;
+    width: 100%;
+    height: 80px;
+    padding-left: 50px;
+    font-size: 20px;
+    z-index: 300 !important;
+    }
+    
+    .scrolling {
+    background-color: rgba(137, 130, 201, 0.767);
+    transition: all 0.5 ease;
+    z-index: 1;
+    border-radius: 13px;
+    box-shadow: inset 0 0 0 1000px rgba(253, 253, 253,);
+    }
+    
+    .inputSearch {
+    width: 160px;
+    left: -181px;
+    font-size: 20px;
+    top: 24px;
+    font-weight: 500;
+    position: relative;
+    border-radius: 14px;
+    background-color: #c7c0c0;
+    height: 35px;
+    outline: none;
+    }
+    
+    .buttonSearch {
+    width: 90px;
+    height: 33px;
+    border-radius: 10px;
+    background-color: #c7c0c093;
+    position: relative;
+    left: -50px;
+    top: -139px;
+    }
+    
+    .buttonSearch:hover{
+    background-color: rgba(19, 17, 17, 0.856);
+    color: white;
+    }
+    
+    .btn-create{
+    height: 90px;
+    bottom: 1em;
+    font-size: 17px;
+    font-weight: 600;
+    width: 124px;
+    border-radius: 15px;
+    background: #acacacc0;
+    position: fixed;
+    right: 1em;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    }
+    
+    .btn-create:hover{
+    background-color: rgba(11, 11, 49, 0.856);
+    color: white;
+    }
+    }
+    
+    
+    
+    
