--- a/client/src/Components/pagination/pagination.css
+++ b/client/src/Components/pagination/pagination.css
@@ -47,3 +47,28 @@
   position: relative;
   bottom: 20px;
 }
+
+
+
+@media only screen and (max-width: 768px) {
+  .button {
+    font-size: 1.2rem;
+    width: 15%;
+    height: auto;
+    padding: 1rem;
+  }
+  
+  .button-principal {
+    font-size: 1.2rem;
+    width: 15%;
+    height: auto;
+    padding: 1rem;
+  }
+  
+  .pagination {
+    margin-top: 1rem;
+    bottom: auto;
+    padding: 1rem;
+    position: fixed;
+  }
+}
